fix: fix broken styles

--- a/src/App.css
+++ b/src/App.css
@@ -1049,9 +1049,9 @@ hr {
 body {
   background-color: #e6e6e6;
 }
-.form-group{
+/* .form-group{
   border: 2px solid #f4f4f4;
-}
+} */
 input:focus,
 input:active,
 button:focus,
